--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -239,3 +239,81 @@
     background: #fff;
     border-radius: 8px;
 }
+.inventory-top-card-column h2 {
+    color: var(--primary-primary-500, #1570ef);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+}
+.inventory-top-card-column-data .first-data {
+    color: var(--grey-grey-600, #5d6679);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+}
+.inventory-top-card-column-data .second-data {
+    color: var(--grey-grey-400, #858d9d);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+}
+.inventory-bottom-table {
+    border-radius: 8px;
+}
+.inventory-table-header h2 {
+    color: var(--grey-grey-800, #383e49);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+}
+.inventory-table-header-button button {
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    padding: 10px 16px !important;
+}
+.inventory-table-header-button button:first-child {
+    color: #fff;
+}
+.inventory-table-header-button button:nth-child(2),
+.inventory-table-header-button button:nth-child(3) {
+    color: #5d6679 !important;
+    border-color: ;
+}
+.css-y8ay40-MuiTableCell-root {
+    color: var(--grey-grey-500, #667085) !important;
+    font-family: Inter !important;
+    font-size: 14px !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    line-height: 20px !important;
+}
+.css-1ex1afd-MuiTableCell-root {
+    color: var(--grey-grey-700, #48505e) !important;
+    font-family: Inter !important;
+    font-size: 14px !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    line-height: 20px !important;
+}
+.css-pdct74-MuiTablePagination-selectLabel,
+.css-levciy-MuiTablePagination-displayedRows,
+.css-194a1fa-MuiSelect-select-MuiInputBase-input.css-194a1fa-MuiSelect-select-MuiInputBase-input.css-194a1fa-MuiSelect-select-MuiInputBase-input {
+    color: var(--grey-grey-700, #48505e) !important;
+    font-family: Inter !important;
+    font-size: 14px !important;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    line-height: 20px !important;
+    margin: 0;
+}
